Introduce CPH_PATH_MAX

PATH_MAX is optional in POSIX, and not provided on GNU/Hurd;
due to the shotcoming of cupsTempFile2(), a dynamically allocated buffer cannot be provided,
so define CPH_PATH_MAX as PATH_MAX (or 1024, if not available), and use it.

https://bugs.freedesktop.org/show_bug.cgi?id=59263